@@ -518,7 +518,7 @@ Try<Nothing> DockerContainerizerProcess::updatePersistentVolumes(
               << source << "' with uid " << s.st_uid
               << " and gid " << s.st_gid;
 
-    Try<Nothing> chown = os::chown(s.st_uid, s.st_gid, source, true);
+    Try<Nothing> chown = os::chown(s.st_uid, s.st_gid, source, false);
     if (chown.isError()) {
       return Error(
           "Failed to change the ownership of the persistent volume at '" +
