@@ -165,6 +165,9 @@ Additional API Changes:
   * [MESOS-5657] - Executors should not inherit environment variables from the
     agent.
 
+  * [MESOS-5680] - We should not 'chown -R' on persistent volumes every time
+    container tries to use it.
+
 3rd Party Upgrades:
   * [MESOS-4805] - Upgraded vendored ry-http-parser-1c3624a to nodejs/http-parser 2.6.1.
   * [MESOS-4678] - Upgraded vendored protobuf 2.5.0 to 2.6.1.
